add exercise (not to forget)

--- a/01_basics/04_aufgaben.ipynb
+++ b/01_basics/04_aufgaben.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gibt es sinnvolle Aufgaben?"
+    "# Gibt es sinnvolle Aufgaben?\n",
+    "\n",
+    "- Schauen: https://www.youtube.com/watch?v=iR2O2GPbB0E"
    ]
   }
  ],
